# sdith-rust

./: CITATION.cff  README.md  test.py
.github/workflows/: deploy_docs.yml
project/: .chktexrc  .gitignore  notes-forsvar.md  notes.md  refs.bib  template.aux  template.blg  template.fdb_latexmk  template.fls  template.out  template.tex  template.toc
sdith/: .gitignore  Cargo.toml  README.md  a.out  bencher.py  build.rs  criterion.toml  dhat.out.205754  poly.py  profile.json  sdith  sdith.pub  sign_profile.json  sign_profile_spec.json  signature.txt
sdith/benches/: api.rs  benchmark.rs  gf256.rs  merkle.rs  my_benchmark.rs  parallel.rs  simd.rs  size.rs
sdith/examples/: dudect.rs
sdith/results/: dell_api_bench_dev.json  dell_api_bench_release.json  dell_api_bench_release2.json  dell_api_bench_release2_turbo.json  dell_api_bench_release2_turbo_blake.json  dell_api_bench_release2_turbo_spec.json  dell_api_bench_release_no_turbo.json  dudect.json  heaptrack_sign.zst  heaptrack_verify.zst
sdith/results/turboboost/: dell_api_bench_release.json  dell_api_bench_release_cycles.json  dell_bench_api_baseline.json  dell_bench_parallel_release.json  dell_bench_simd_release.json
sdith/src/: api.rs  cli.rs  constants.rs  keygen.rs  lagrange.rs  lib.rs  main.rs  modular_arithmetics.rs  mpc.rs  shamir.rs  sign.rs  witness.rs
sdith/src/arith/: arrays.rs  beaver_triples.rs  gf251.rs  matrices.rs  mod.rs  vectors.rs
sdith/src/arith/gf256/: addition_tests.rs  gf256_arith.rs  gf256_ext.rs  gf256_matrices.rs  gf256_poly.rs  gf256_vector.rs  mod.rs  multiplication_tests.rs
sdith/src/cli/: cli.rs  main.rs
sdith/src/constants/: f_poly.rs  mod.rs  params.rs  precomputed.rs  types.rs
sdith/src/constants/categories/: cat1.rs  mod.rs
sdith/src/constants/params/: cat1.rs  cat3.rs  cat5.rs
sdith/src/helpers/: gf256.rs  mod.rs  modular_arithmetics.rs
sdith/src/helpers/gf256/: gf256.rs  mod.rs
sdith/src/kat/: mod.rs  utils.rs
sdith/src/keygen/: mod.rs  witness.rs
sdith/src/mpc/: beaver.rs  broadcast.rs  challenge.rs  mod.rs  mpc.rs
sdith/src/signature/: input.rs  mod.rs  sign.rs  signature.rs  test.txt  verify.rs
sdith/src/spec_tests/: PQCsignKAT_432.rsp  keygen.rs  mod.rs  spec_constants.rs  spec_keygen.rs  spec_mpc.rs  spec_witness.rs  spec_xof.rs  utils.rs  witness.rs  xof.rs
sdith/src/subroutines/: challenge.rs  commitments.rs  hashing.rs  lagrange.rs  marshalling.rs  matrices.rs  merkle_tree.rs  mod.rs  shamir.rs
sdith/src/subroutines/arith/gf256/: gf256_arith.rs  gf256_ext.rs  gf256_matrices.rs  gf256_poly.rs  gf256_vector.rs  mod.rs
sdith/src/subroutines/arithmetics/: mod.rs
sdith/src/subroutines/arithmetics/gf256/: extensions.rs  matrices.rs  mod.rs  polynomials.rs  vectors.rs
sdith/src/subroutines/merkle_tree/: array_based.rs  base.rs  batched.rs  node_based.rs  parallel.rs
sdith/src/subroutines/mpc/: beaver.rs  broadcast.rs  challenge.rs  input.rs  mod.rs
sdith/src/subroutines/prg/: hashing.rs  mod.rs  prg.rs  xof.rs
sdith/src/utils/: iterator.rs  marshalling.rs  mod.rs
sdith/test/: gl256.c
